2007-07-26  Brian Ripley <Brian.Ripley@R-project.org>

	* DESCRIPTION (Version, Date): 3.1-84
	* LICENCE, inst/LICENCE: clarify this is licensed under GPL >= 2.
	* README, R/*.R, src/*.[ch]: Update source for GPL.
	* man/*.Rd: add header with licence conditions

2007-07-02  Brian Ripley <Brian.Ripley@R-project.org>

	* R/varFunc.R: varIdent did not look at its 'fixed' arg, PR#9765
	* tests/varIndent.R: test for the above.

2007-06-13  Brian Ripley <Brian.Ripley@R-project.org>

	* R/VarCov.R: correct getVarCov.gls, PR#9752

2007-06-13  Brian Ripley <Brian.Ripley@R-project.org>

	* DESCRIPTION (Version, Date): 3.1-83
	Also, update authors and email addresses where known.
	* R/lme.R: called quantile on potentially missing values.
	* tests/missing.{R,Rout.save}: test summary methods

2007-06-12  Brian Ripley <Brian.Ripley@R-project.org>

	* DESCRIPTION (Version, Date): 3.1-82
	Also, R >= 2.4.0 because of seq_along.
	* tests/lme.Rout.save: back to 2.5.1 layout.

2007-05-29  Brian Ripley <Brian.Ripley@R-project.org>

	* R/{gls,lme,pdMat}.R: qualify uses of nchar() by 'type'.
	* R/lme.R: layout of over-long error message.
	* tests/lme.Rout.save: update for above and for 2.6.0 layout.
	* R/{gls,gnls,lme,nlme}.R: copy row names to fitted values and
	residuals.
	* R/{gls,gnls,lme}.R: support naresid and napredict.
	* man/{residuals,fitted}.lme.Rd: document this.
	* tests/missing.{R,Rout.save}: tests of missing-value support.

2007-05-20,24  Brian Ripley <Brian.Ripley@R-project.org>

	* R/*.R: partial matching issues, switch to seq_along.

2007-05-15  Brian Ripley <Brian.Ripley@R-project.org>

	* DESCRIPTION (Version, Date): 3.1-81
	* NAMESPACE, R/zzMethods.R: migrate vcov methods from stats to here.

2007-05-04  Brian Ripley <Brian.Ripley@R-project.org>

	* man/{Extracr.pdMat,getdata.*,summary.varFunc}.Rd: remove
	surplus }.

2007-03-30  Brian Ripley <Brian.Ripley@R-project.org>

	* DESCRIPTION (Version, Date): 3.1-80
	* R/nlme.R (contrMat): Allow for expressions in 'fixed'.