@@ -1,6 +1,6 @@
 Package: nlme
-Version: 3.1-84
-Date: 2007-07-27
+Version: 3.1-85
+Date: 2007-09-17
 Priority: recommended
 Title: Linear and Nonlinear Mixed Effects Models
 Author: Jose Pinheiro <Jose.Pinheiro@pharma.novartis.com>,
@@ -14,5 +14,5 @@ Depends: graphics, stats, R (>= 2.4.0)
 Imports: lattice
 LazyLoad: yes
 LazyData: yes
-License: GPL version 2 or later
-Packaged: Fri Jul 27 10:27:13 2007; ripley
+License: GPL (>=2)
+Packaged: Mon Sep 17 13:04:35 2007; ripley
