@@ -50,9 +50,8 @@ corRatio(value, form, nugget, metric, fixed)
   representing a rational quadratic spatial correlation structure. Letting
   \eqn{d} denote the range and \eqn{n} denote the nugget
   effect, the correlation between two observations a distance
-  \eqn{r} apart is \eqn{(r/d)^2/(1+(r/d)^2)} when no nugget effect
-  is present and
-  \eqn{(1-n)(r/d)^2/(1+(r/d)^2)}{(1-n)*(r/d)^2/(1+(r/d)^2)} when a
+  \eqn{r} apart is \eqn{1/(1+(r/d)^2)} when no nugget effect
+  is present and \eqn{(1-n)/(1+(r/d)^2)} when a
   nugget effect is  assumed. Objects created using this constructor need
   to be later initialized using the appropriate \code{Initialize}
   method. 
